--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,50 +15,37 @@ name = "curv"
 crate-type = ["lib"]
 
 [dependencies]
-curve25519-dalek = "3"
-digest = "0.9"
-generic-array = "0.14"
-typenum = "1.13"
+curve25519-dalek = { version = "4.0.0-rc.3", features = ["rand_core", "precomputed-tables"] }
+digest = "0.10.7"
+generic-array = "0.14.7"
+typenum = "1.16.0"
 ff-zeroize = "0.6.3"
-hex = { version = "0.4", features = ["serde"] }
-hmac = "0.11"
-thiserror = "1"
+hex = { version = "0.4.3", features = ["serde"] }
+thiserror = "1.0.40"
 lazy_static = "1.4"
-num-traits = "0.2"
-num-integer = "0.1"
-pairing-plus = "0.19"
-rand = "0.7"
-rand_legacy = { package = "rand", version = "0.6" }
-serde = { version = "1.0", features = ["derive"] }
-serde_bytes = "0.11"
-serde_derive = "1.0"
-sha2 = "0.9"
-sha3 = "0.9"
-old_sha2 = { package = "sha2", version = "0.8" }
-zeroize = "1"
-merkle-cbt = "0.3"
-
+num-traits = "0.2.15"
+num-integer = "0.1.45"
+rand = "0.8.5"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_bytes = "0.11.9"
+sha2 = "0.10.7"
+sha3 = "0.10.8"
+zeroize = "1.6.0"
+merkle-cbt = "0.3.2"
+num-prime = { version = "0.4.3", features = ["big-int", "big-table"] }
 rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
-num-bigint = { version = "0.4", features = ["serde"], optional = true }
-
-[dependencies.secp256k1]
-version = "0.20"
-features = ["serde", "rand-std", "global-context"]
-
-[dependencies.p256]
-version = "0.11.1"
-features = ["ecdsa", "ecdsa-core"]
+num-bigint = { version = "0.4.3", features = ["serde"], optional = true }
 
 [dev-dependencies]
-serde_test = "1.0"
-serde_json = "1"
-paste = "1.0.2"
-proptest = "0.10"
-proptest-derive = "0.2"
-blake2 = "0.9"
+serde_test = "1.0.164"
+serde_json = "1.0.99"
+paste = "1.0.12"
+proptest = "1.2.0"
+proptest-derive = "0.3.0"
+blake2 = "0.10.6"
 
 [features]
-default = ["rust-gmp-kzen"]
+default = ["num-bigint"]
 
 [package.metadata.docs.rs]
 rustdoc-args = [ "--html-in-header", "katex-header.html", "--cfg", "docsrs" ]
